[package]
name = "gldf-rs-wasm"
version = "0.1.0"
authors = ["Holger Trahe <trahe@mac.com>"]
edition = "2021"


#[features]
#default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
#yew = { path = "../yew/packages/yew", features = ["csr"]}
yew =  {version = "0.19", features = ["csr"]}
base64 = "0.13.0"
gloo = "0.8"
#gldf-rs = {path = "../gldf-rs"}
gldf-rs = {git = "https://github.com/holg/gldf-rs/"}

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.5", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.13"
#
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen-futures = "0.4"
#wasm-logger = "0.2"
#log = "0.4"
#
#[features]
#hydration = ["yew/hydration"]
#ssr = ["yew/ssr", "yew/tokio"]
#
#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"
